# software_system_architecture_task_02

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yaml  dockerfile  openapi.yaml  test_api.sh
src/: main.cpp
src/application/: AuthService.cpp  MedicalRecordService.cpp  MedicalRecordService.h  PatientService.cpp  PatientService.h  UserService.cpp  UserService.h
src/application/dtos/: DTOs.h
src/application/services/: AuthService.cpp  AuthService.h  MedicalRecordService.cpp  MedicalRecordService.h  PatientService.cpp  PatientService.h  UserService.cpp  UserService.h
src/domain/: IPatient.h  MedicalRecord.cpp  MedicalRecord.h  Patient.cpp  Patient.h  User.cpp  User.h  ValueObjects.cpp  ValueObjects.h
src/domain/entities/: MedicalRecord.h  Patient.h  User.h
src/domain/interfaces/: IRepository.h
src/domain/value_objects/: ValueObjects.cpp  ValueObjects.h
src/infrastructure/: InMemoryMedicalRecordRepository.cpp  InMemoryMedicalRecordRepository.h  InMemoryPatientRepository.cpp  InMemoryPatientRepository.h  InMemoryUserRepository.cpp  InMemoryUserRepository.h  JWTService.cpp  JWTService.h  PasswordHasher.cpp
src/infrastructure/repositories/: InMemoryMedicalRecordRepository.cpp  InMemoryMedicalRecordRepository.h  InMemoryPatientRepository.cpp  InMemoryPatientRepository.h  InMemoryUserRepository.cpp  InMemoryUserRepository.h
src/infrastructure/security/: JWTService.cpp  JWTService.h  PasswordHasher.cpp  PasswordHasher.h
src/presentation/: AuthHandler.cpp  MedicalRecordHandler.cpp  PatientHandler.cpp  RequestHandlerFactory.cpp  RequestHandlerFactory.h  StaticFileHandler.cpp  StaticFileHandler.h  UserHandler.cpp  UserHandler.h
src/presentation/handlers/: AuthHandler.cpp  AuthHandler.h  HealthHandler.cpp  HealthHandler.h  MedicalRecordHandler.cpp  MedicalRecordHandler.h  NotFoundHandler.cpp  NotFoundHandler.h  PatientHandler.cpp  PatientHandler.h  UserHandler.cpp  UserHandler.h
src/shared/: ErrorHandler.cpp  ErrorHandler.h  Logger.cpp
web/docs/: index.html
web/swagger/: index.html  openapi.yaml
